--- a/Linn.conf
+++ b/Linn.conf
@@ -1,11 +1,12 @@
-# ----------------------------------------------------------------
-# Loon全局配置 by Tartarus 
-# 修改版本 by Linn
+# ---------------------------------------
+# Loon配置 by Tartarus ddgksf2013
+# 修改版本 by MrKangHI
 # Loon官方文档：https://nsloon.app/docs/intro
 # Loon教程链接：https://coffee-elderberry-22b.notion.site/Loon-71747252d5054551a8cd10924064899c
 # Loon第三方知识库：https://t.me/ibilibili/581
 # Loon规则GitHub：https://github.com/blackmatrix7/ios_rule_script/tree/master/rule/Loon
-# ----------------------------------------------------------------
+
+# ---------------------------------------
 # 导入配置。
 # 导入完成后点 https://www.nsloon.com/openloon/flowmodel=filter 切换至自动分流模式。
 # 再点 https://www.nsloon.com/openloon/proxymode=tun 切换代理模式至 TUN Only 模式 [此操作点击跳转至Loon后即为切换成功]。
@@ -15,7 +16,13 @@
 # 点击Loon底部导航栏的［配置］→ 右上角的［⋯］，打开［始终开启］的开关。
 # 添加你的机场订阅。
 # 打开Loon的开关后并点击 https://www.nsloon.com/openloon/update?sub=all 一键更新所有外部资源。
-# ----------------------------------------------------------------
+
+# ---------------------------------------
+插件库：
+https://loon-plugin.vercel.app/
+https://whatshub.top/loon/
+
+# ---------------------------------------
 [General]
 # IPv6 支持
 ip-mode = dual
@@ -28,18 +35,19 @@ sni-sniffing = true
 # 策略组切换时关闭连接
 disconnect-on-policy-change = true
 # 域名拦截行为
-domain-reject-mode = Request
+domain-reject-mode = DNS
 # > 跳过代理
 # 跳过某个域名或者 IP 段，这些目标主机将不会由 Loon Proxy 处理。
-skip-proxy = localhost, *.local, captive.apple.com, e.crashlytics.com, www.baidu.com, passenger.t3go.cn, yunbusiness.ccb.com, wxh.wo.cn, gate.lagou.com, www.abchina.com.cn, login-service.mobile-bank.psbc.com, mobile-bank.psbc.com, 10.0.0.0/8, 127.0.0.1/32, 172.16.0.0/12, 192.168.0.0/16, 192.168.122.1/32, 193.168.0.1/32, ::1/128, fe80::/10
+skip-proxy = localhost,*.local,captive.apple.com,e.crashlytics.com,www.baidu.com,passenger.t3go.cn,yunbusiness.ccb.com,wxh.wo.cn,gate.lagou.com,www.abchina.com.cn,login-service.mobile-bank.psbc.com,mobile-bank.psbc.com,10.0.0.0/8,127.0.0.1/32,172.16.0.0/12,192.168.0.0/16,192.168.122.1/32,193.168.0.1/32,::1/128,fe80::/10
 # > Always Real IP Hosts
 # DNS 数据包将被转发到上游 DNS 服务器。
-real-ip = *.10099.com.cn, *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn
+real-ip = *.10099.com.cn,*.cmpassport.com,*.jegotrip.com.cn,*.icitymobile.mobi,id6.me,*.pingan.com.cn
 # 绕过路由
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 # DNS 服务器
-dns-server = 223.5.5.5,8.8.8.8,1.1.1.1
-doh-server = https://223.5.5.5/dns-query,https://8.8.8.8/dns-query
+dns-server = 119.29.29.29,8.8.8.8
+doh-server = https://dns.google/dns-query,https://dns.cloudflare.com/dns-query,https://101.101.101.101/dns-query
+doh3-server = https://dns.google/dns-query,https://dns.cloudflare.com/dns-query,https://101.101.101.101/dns-query
 # Hijack DNS
 # 默认情况下，Loon 只返回发送到 Loon DNS 地址的 DNS 查询的假 IP 地址(198.18.0.2)。
 # 有些设备或软件总是使用硬编码的 DNS 服务器。 (例如 Google Speakers 总是使用 8.8.8.8)。 您可以使用此选项劫持查询，以获得一个假地址。
@@ -51,7 +59,7 @@ wifi-access-socks5-port = 1235
 mitm-on-wifi-access = false
 # 代理测速 URL
 internet-test-url = http://www.gstatic.com/generate_204
-proxy-test-url = http://detectportal.firefox.com/success.txt
+proxy-test-url = http://www.gstatic.com/generate_204
 # 测速超时 (s)
 test-timeout = 5
 # 网络接口
@@ -65,63 +73,73 @@ geoip-url = https://cdn.jsdelivr.net/gh/Loyalsoldier/geoip@release/Country.mmdb
 ipasn-url = https://cdn.jsdelivr.net/gh/P3TERX/GeoLite.mmdb@download/GeoLite2-ASN.mmdb
 # 解析器
 resource-parser = https://cdn.jsdelivr.net/gh/sub-store-org/Sub-Store@release/sub-store-parser.loon.min.js
-# ----------------------------------------------------------------
+
+# ---------------------------------------
 [Host]
 
-# ----------------------------------------------------------------
+# ---------------------------------------
 [Proxy]
 
-# ----------------------------------------------------------------
+# ---------------------------------------
 [Remote Proxy]
 
-# ----------------------------------------------------------------
+# ---------------------------------------
 [Proxy Group]
 FINAL = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
-节点选择 = select,DIRECT,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
 全球加速 = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
+节点选择 = url-test,香港节点,台湾节点,狮城节点,日本节点,阿美利卡,加拿大鹅,欧盟委员会,日不落帝国,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
 苹果服务 = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-国际媒体 = select,DIRECT,节点选择,香港节点,台湾节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
-Spotify = select,DIRECT,节点选择,香港节点,台湾节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
-哔哩哔哩 = select,DIRECT,节点选择,香港节点,台湾节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bilibili.png
+国际媒体 = select,DIRECT,节点选择,香港节点,台湾节点,阿美利卡,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
+Spotify = select,DIRECT,节点选择,香港节点,台湾节点,阿美利卡,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
+# 哔哩哔哩 = select,DIRECT,节点选择,香港节点,台湾节点,阿美利卡,img-url = https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/bilibili.png
+日不落帝国 = url-test,英国,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_Kingdom.png
+阿美利卡 = url-test,美国,url = http://www.qualcomm.cn/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
 香港节点 = url-test,香港,url = http://www.qualcomm.cn/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
 台湾节点 = url-test,台湾,url = http://www.qualcomm.cn/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
 狮城节点 = url-test,新加坡,url = http://www.qualcomm.cn/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
 # 韩国节点 = url-test,韩国,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
 日本节点 = url-test,日本,url = http://www.qualcomm.cn/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
-美国节点 = url-test,美国,url = http://www.qualcomm.cn/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+加拿大鹅 = url-test,加拿大,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Canada.png
+欧盟委员会 = url-test,欧盟,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/European_Union.png
 # 解锁节点 = select,网易解锁,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music_Unlock.png
 
-# ----------------------------------------------------------------
+# ---------------------------------------
 [Remote Filter]
+加拿大 = NameRegex, FilterKey = "CA"
 香港 = NameRegex, FilterKey = "(?i)(港|HK|Hong)"
 台湾 = NameRegex, FilterKey = "(?i)(台|TW|Tai)"
 日本 = NameRegex, FilterKey = "(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
-# 韩国 = NameRegex, FilterKey = "(?i)(KR|Korea|KOR|首尔|韩|韓)"
+韩国 = NameRegex, FilterKey = "(?i)(KR|Korea|KOR|首尔|韩|韓)"
 美国 = NameRegex, FilterKey = "(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
 新加坡 = NameRegex, FilterKey = "(?i)(新加坡|坡|狮城|SG|Singapore)"
 英国 = NameRegex, FilterKey = "🇬🇧|英国|UK|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰"
 欧盟 = NameRegex, FilterKey = "(?=.*(?i)(德国|Germany|法国|France|意大利|Italy|西班牙|Spain|奥地利|Austria|比利时|Belgium|保加利亚|Bulgaria|克罗地亚|Croatia|塞浦路斯|Cyprus|捷克|Czechia|捷克共和国|Czech Republic|丹麦|Denmark|爱沙尼亚|Estonia|芬兰|Finland|希腊|Greece|匈牙利|Hungary|爱尔兰|Ireland|拉脱维亚|Latvia|立陶宛|Lithuania|卢森堡|Luxembourg|马耳他|Malta|荷兰|Netherlands|波兰|Poland|葡萄牙|Portugal|罗马尼亚|Romania|斯洛伐克|Slovakia|斯洛文尼亚|Slovenia|瑞典|Sweden))"
 
-# ----------------------------------------------------------------
+# ---------------------------------------
 [Remote Rule]
-https://raw.githubusercontent.com/ddgksf2013/Filter/master/Unbreak.list, tag=规则修正, tag=规则修正, policy=DIRECT,enabled=true
-https://raw.githubusercontent.com/Cats-Team/AdRules/main/qx.conf, tag=广告终结者, policy=REJECT,enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=微信直连, policy=DIRECT, update-interval=172800, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/ddgksf2013/Filter/master/GoogleVoice.list, tag=Google Voice, policy=美国节点,enabled=true
-https://gist.githubusercontent.com/ddgksf2013/cb4121e8b5c5d865cc949cb8120320c4/raw/Ai.yaml, tag=Ai-All-In-One, policy=美国节点,enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Spotify/Spotify.list, tag=Spotify音乐, policy=Spotify,enabled=true
-https://raw.githubusercontent.com/ddgksf2013/Filter/master/Streaming.list, tag=国际媒体, policy=国际媒体,enabled=true
-https://raw.githubusercontent.com/ddgksf2013/Filter/master/StreamingSE.list, tag=哔哩哔哩, policy=哔哩哔哩,enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=苹果服务, policy=苹果服务,enabled=true
-https://raw.githubusercontent.com/ConnersHua/RuleGo/master/Surge/Ruleset/Proxy.list, tag=全球加速, policy=全球加速,enabled=true
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, tag=国内网站, policy=DIRECT,enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Filter/master/Unbreak.list, policy=DIRECT, tag=规则修正, enabled=true
+https://raw.githubusercontent.com/Cats-Team/AdRules/main/qx.conf, policy=REJECT, tag=广告终结者, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=false
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/Tencent/Tencent.list, policy=DIRECT, tag=Tencent, enabled=false
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/DouYin/DouYin.list, policy=DIRECT, tag=抖音, enabled=false
+https://raw.githubusercontent.com/ddgksf2013/Filter/master/GoogleVoice.list, policy=阿美利卡, tag=Google Voice, enabled=true
+https://gist.githubusercontent.com/ddgksf2013/cb4121e8b5c5d865cc949cb8120320c4/raw/Ai.yaml, policy=阿美利卡, tag=Ai-All-In-One, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Spotify/Spotify.list, policy=Spotify, tag=Spotify音乐, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Filter/master/Streaming.list, policy=国际媒体, tag=国际媒体, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Filter/master/StreamingSE.list, policy=哔哩哔哩, tag=哔哩哔哩, enabled=false
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/Apple/Apple.list, policy=苹果服务, tag=苹果服务, enabled=true
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/Apple/Apple_Domain.list, policy=苹果服务, tag=苹果服务_域名, enabled=true
+https://raw.githubusercontent.com/ConnersHua/RuleGo/master/Surge/Ruleset/Proxy.list, policy=全球加速, tag=全球加速, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=国内网站, enabled=false
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/ChinaMax/ChinaMax.list, policy=DIRECT, tag=国内网站/IP合集, enabled=true
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/ChinaMax/ChinaMax_Domain.list, policy=DIRECT, tag=国内网站/IP合集-Domain, enabled=true
 
-# ----------------------------------------------------------------
+# ---------------------------------------
 [Rule]
 # > 一些比较容易忽视的分流
-DOMAIN, ad.12306.cn, DIRECT
-DOMAIN, sdkapp.uve.weibo.com, DIRECT
-DOMAIN-KEYWORD, github, FINAL
+# DOMAIN, ad.12306.cn, DIRECT
+# DOMAIN, sdkapp.uve.weibo.com, DIRECT
+# DOMAIN-KEYWORD, github, FINAL
 
 # > local
 IP-CIDR, 10.0.0.0/8, DIRECT
@@ -135,26 +153,33 @@ IP-CIDR, 182.254.116.0/24, DIRECT
 GEOIP, CN, DIRECT
 FINAL, FINAL
 
-# ----------------------------------------------------------------
+# ---------------------------------------
 [Rewrite]
 
-# ----------------------------------------------------------------
+# ---------------------------------------
 [Remote Rewrite]
 
-# ----------------------------------------------------------------
+# ---------------------------------------
 [Script]
 
-# ----------------------------------------------------------------
+# ---------------------------------------
 [Remote Script]
 
-# ----------------------------------------------------------------
+# ---------------------------------------
 [Plugin]
+https://kelee.one/Tool/Loon/Lpx/Block_HTTPDNS.lpx, enabled=true
+https://kelee.one/Tool/Loon/Lpx/BlockAdvertisers.lpx, enabled=true
+https://kelee.one/Tool/Loon/Lpx/Remove_ads_by_keli.lpx, enabled=true
+https://kelee.one/Tool/Loon/Lpx/Script-Hub.lpx, enabled=true
+https://kelee.one/Tool/Loon/Lpx/Sub-Store.lpx, policy=FINAL, enabled=true
+https://kelee.one/Tool/Loon/Lpx/Node_detection_tool.lpx, enabled=true
+https://kelee.one/Tool/Loon/Lpx/QuickSearch.lpx, enabled=true
 
-# ----------------------------------------------------------------
+# ---------------------------------------
 [Mitm]
-hostname = 
 ca-p12 = 
 ca-passphrase = 
+hostname = 
 skip-server-cert-verify = false
 
-# ----------------------------------------------------------------
+# ---------------------------------------
