--- a/Linn.conf
+++ b/Linn.conf
@@ -117,20 +117,20 @@ Spotify = select,DIRECT,节点选择,香港节点,台湾节点,阿美利卡,img-
 
 # ---------------------------------------
 [Remote Rule]
-https://raw.githubusercontent.com/ddgksf2013/Filter/master/Unbreak.list, policy=DIRECT, tag=规则修正, enabled=true
-https://raw.githubusercontent.com/Cats-Team/AdRules/main/qx.conf, policy=REJECT, tag=广告终结者, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=false
+https://cdn.jsdelivr.net/gh/ddgksf2013/Filter@master/Unbreak.list, policy=DIRECT, tag=规则修正, enabled=true
+https://cdn.jsdelivr.net/gh/Cats-Team/AdRules@main/qx.conf, policy=REJECT, tag=广告终结者, enabled=true
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/QuantumultX/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=false
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/Tencent/Tencent.list, policy=DIRECT, tag=Tencent, enabled=false
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/DouYin/DouYin.list, policy=DIRECT, tag=抖音, enabled=false
-https://raw.githubusercontent.com/ddgksf2013/Filter/master/GoogleVoice.list, policy=阿美利卡, tag=Google Voice, enabled=true
+https://cdn.jsdelivr.net/gh/ddgksf2013/Filter@master/GoogleVoice.list, policy=阿美利卡, tag=Google Voice, enabled=true
 https://gist.githubusercontent.com/ddgksf2013/cb4121e8b5c5d865cc949cb8120320c4/raw/Ai.yaml, policy=阿美利卡, tag=Ai-All-In-One, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Spotify/Spotify.list, policy=Spotify, tag=Spotify音乐, enabled=true
-https://raw.githubusercontent.com/ddgksf2013/Filter/master/Streaming.list, policy=国际媒体, tag=国际媒体, enabled=true
-https://raw.githubusercontent.com/ddgksf2013/Filter/master/StreamingSE.list, policy=哔哩哔哩, tag=哔哩哔哩, enabled=false
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/QuantumultX/Spotify/Spotify.list, policy=Spotify, tag=Spotify音乐, enabled=true
+https://cdn.jsdelivr.net/gh/ddgksf2013/Filter@master/Streaming.list, policy=国际媒体, tag=国际媒体, enabled=true
+https://cdn.jsdelivr.net/gh/ddgksf2013/Filter@master/StreamingSE.list, policy=哔哩哔哩, tag=哔哩哔哩, enabled=false
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/Apple/Apple.list, policy=苹果服务, tag=苹果服务, enabled=true
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/Apple/Apple_Domain.list, policy=苹果服务, tag=苹果服务_域名, enabled=true
-https://raw.githubusercontent.com/ConnersHua/RuleGo/master/Surge/Ruleset/Proxy.list, policy=全球加速, tag=全球加速, enabled=true
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=国内网站, enabled=false
+https://cdn.jsdelivr.net/gh/ConnersHua/RuleGo@master/Surge/Ruleset/Proxy.list, policy=全球加速, tag=全球加速, enabled=true
+https://cdn.jsdelivr.net/gh/VirgilClyne/GetSomeFries@main/ruleset/ASN.China.list, policy=DIRECT, tag=国内网站, enabled=false
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/ChinaMax/ChinaMax.list, policy=DIRECT, tag=国内网站/IP合集, enabled=true
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/ChinaMax/ChinaMax_Domain.list, policy=DIRECT, tag=国内网站/IP合集-Domain, enabled=true
 
@@ -139,7 +139,7 @@ https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/ChinaM
 # > 一些比较容易忽视的分流
 # DOMAIN, ad.12306.cn, DIRECT
 # DOMAIN, sdkapp.uve.weibo.com, DIRECT
-# DOMAIN-KEYWORD, github, FINAL
+DOMAIN-KEYWORD, github, FINAL
 
 # > local
 IP-CIDR, 10.0.0.0/8, DIRECT
