--- a/Linn.conf
+++ b/Linn.conf
@@ -18,9 +18,9 @@
 # 打开Loon的开关后并点击 https://www.nsloon.com/openloon/update?sub=all 一键更新所有外部资源。
 
 # ---------------------------------------
-插件库：
-https://loon-plugin.vercel.app/
-https://whatshub.top/loon/
+# 插件库如下
+# https://loon-plugin.vercel.app/
+# https://whatshub.top/loon/
 
 # ---------------------------------------
 [General]
@@ -87,10 +87,10 @@ resource-parser = https://cdn.jsdelivr.net/gh/sub-store-org/Sub-Store@release/su
 [Proxy Group]
 FINAL = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 全球加速 = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
-节点选择 = url-test,香港节点,台湾节点,狮城节点,日本节点,阿美利卡,加拿大鹅,欧盟委员会,日不落帝国,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
+节点选择 = select,香港节点,台湾节点,狮城节点,日本节点,阿美利卡,加拿大鹅,欧盟委员会,日不落帝国,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
 苹果服务 = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 国际媒体 = select,DIRECT,节点选择,香港节点,台湾节点,阿美利卡,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
-Spotify = select,DIRECT,节点选择,香港节点,台湾节点,阿美利卡,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
+Spotify = select,DIRECT,香港节点,阿美利卡,日不落帝国,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
 # 哔哩哔哩 = select,DIRECT,节点选择,香港节点,台湾节点,阿美利卡,img-url = https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/bilibili.png
 日不落帝国 = url-test,英国,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_Kingdom.png
 阿美利卡 = url-test,美国,url = http://www.qualcomm.cn/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
@@ -136,22 +136,24 @@ https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Loon/ChinaM
 
 # ---------------------------------------
 [Rule]
+DOMAIN-KEYWORD,github,全球加速
+DOMAIN,raw.githubusercontent.com,全球加速
+DOMAIN,cdn.jsdelivr.net,DIRECT
 # > 一些比较容易忽视的分流
 # DOMAIN, ad.12306.cn, DIRECT
 # DOMAIN, sdkapp.uve.weibo.com, DIRECT
-DOMAIN-KEYWORD, github, FINAL
 
 # > local
-IP-CIDR, 10.0.0.0/8, DIRECT
-IP-CIDR, 127.0.0.0/8, DIRECT
-IP-CIDR, 172.16.0.0/12, DIRECT
-IP-CIDR, 192.168.0.0/16, DIRECT
-IP-CIDR, 224.0.0.0/24, DIRECT
-IP-CIDR, 182.254.116.0/24, DIRECT
+IP-CIDR,10.0.0.0/8,DIRECT
+IP-CIDR,127.0.0.0/8,DIRECT
+IP-CIDR,172.16.0.0/12,DIRECT
+IP-CIDR,192.168.0.0/16,DIRECT
+IP-CIDR,224.0.0.0/24,DIRECT
+IP-CIDR,182.254.116.0/24,DIRECT
 
 # > geoip
-GEOIP, CN, DIRECT
-FINAL, FINAL
+GEOIP,CN,DIRECT
+FINAL,FINAL
 
 # ---------------------------------------
 [Rewrite]
@@ -172,14 +174,22 @@ https://kelee.one/Tool/Loon/Lpx/BlockAdvertisers.lpx, enabled=true
 https://kelee.one/Tool/Loon/Lpx/Remove_ads_by_keli.lpx, enabled=true
 https://kelee.one/Tool/Loon/Lpx/Script-Hub.lpx, enabled=true
 https://kelee.one/Tool/Loon/Lpx/Sub-Store.lpx, policy=FINAL, enabled=true
+https://raw.githubusercontent.com/sooyaaabo/Loon/main/Plugin/GitHub.plugin, enabled=true
+https://github.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.loon.plugin, policy=FINAL, enabled=true
 https://kelee.one/Tool/Loon/Lpx/Node_detection_tool.lpx, enabled=true
+https://github.com/NSRingo/WeatherKit/releases/latest/download/iRingo.WeatherKit.plugin, enabled=true
+https://github.com/NSRingo/GeoServices/releases/latest/download/iRingo.Maps.plugin, enabled=true
+https://kelee.one/Tool/Loon/Lpx/Switch_github_mirror.lpx, enabled=false
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/DNS.plugin, enabled=false
 https://kelee.one/Tool/Loon/Lpx/QuickSearch.lpx, enabled=true
+https://kelee.one/Tool/Loon/Lpx/Weixin_external_links_unlock.lpx, enabled=true
+https://raw.githubusercontent.com/zqzess/rule_for_quantumultX/master/Loon/Plugin/SkipProxy.plugin, enabled=true
 
 # ---------------------------------------
 [Mitm]
 ca-p12 = 
 ca-passphrase = 
-hostname = 
+hostname =
 skip-server-cert-verify = false
 
 # ---------------------------------------
